# src/controllers/authController.js
@@ -2,96 +2,6 @@ const User = require("../models/User/user");
 const sendMail = require("../utils/sendMail");
 const SuccessHandler = require("../utils/SuccessHandler");
 const ErrorHandler = require("../utils/ErrorHandler");
-//register
-const register = async (req, res) => {
-  // #swagger.tags = ['auth']
-  try {
-    const { name, email, password } = req.body;
-    if (
-      !password.match(
-        /(?=[A-Za-z0-9@#$%^&+!=]+$)^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[@#$%^&+!=])(?=.{8,}).*$/
-      )
-    ) {
-      return ErrorHandler(
-        "Password must contain atleast one uppercase letter, one special character and one number",
-        400,
-        req,
-        res
-      );
-    }
-    const user = await User.findOne({ email });
-    if (user) {
-      return ErrorHandler("User already exists", 400, req, res);
-    }
-    const newUser = await User.create({
-      name,
-      email,
-      password,
-    });
-    newUser.save();
-    return SuccessHandler("User created successfully", 200, res);
-  } catch (error) {
-    return ErrorHandler(error.message, 500, req, res);
-  }
-};
-
-//request email verification token
-const requestEmailToken = async (req, res) => {
-  // #swagger.tags = ['auth']
-
-  try {
-    const { email } = req.body;
-    const user = await User.findOne({ email });
-    if (!user) {
-      return ErrorHandler("User does not exist", 400, req, res);
-    }
-    const emailVerificationToken = Math.floor(100000 + Math.random() * 900000);
-    const emailVerificationTokenExpires = new Date(Date.now() + 10 * 60 * 1000);
-    user.emailVerificationToken = emailVerificationToken;
-    user.emailVerificationTokenExpires = emailVerificationTokenExpires;
-    await user.save();
-    const message = `Your email verification token is ${emailVerificationToken} and it expires in 10 minutes`;
-    const subject = `Email verification token`;
-    await sendMail(email, subject, message);
-    return SuccessHandler(
-      `Email verification token sent to ${email}`,
-      200,
-      res
-    );
-  } catch (error) {
-    return ErrorHandler(error.message, 500, req, res);
-  }
-};
-
-//verify email token
-const verifyEmail = async (req, res) => {
-  // #swagger.tags = ['auth']
-
-  try {
-    const { email, emailVerificationToken } = req.body;
-    const user = await User.findOne({ email });
-    if (!user) {
-      return res.status(400).json({
-        success: false,
-        message: "User does not exist",
-      });
-    }
-    if (
-      user.emailVerificationToken !== emailVerificationToken ||
-      user.emailVerificationTokenExpires < Date.now()
-    ) {
-      return ErrorHandler("Invalid token", 400, req, res);
-    }
-    user.emailVerified = true;
-    user.emailVerificationToken = null;
-    user.emailVerificationTokenExpires = null;
-    jwtToken = user.getJWTToken();
-    await user.save();
-    return SuccessHandler("Email verified successfully", 200, res);
-  } catch (error) {
-    return ErrorHandler(error.message, 500, req, res);
-  }
-};
 
 //login
 const login = async (req, res) => {
@@ -101,29 +11,25 @@ const login = async (req, res) => {
     const { email, password } = req.body;
     const user = await User.findOne({ email }).select("+password");
     if (!user) {
-      return ErrorHandler("User does not exist", req, 400, res);
+      return ErrorHandler("User does not exist", 400, req, res);
+    }
+    if(!user.isActive){
+      return ErrorHandler("User is not active", 400, req, res);
     }
     const isMatch = await user.comparePassword(password);
     if (!isMatch) {
       return ErrorHandler("Invalid credentials", 400, req, res);
     }
-    if (!user.emailVerified) {
-      return ErrorHandler("Email not verified", 400, req, res);
-    }
     jwtToken = user.getJWTToken();
-    return SuccessHandler("Logged in successfully", 200, res);
-  } catch (error) {
-    return ErrorHandler(error.message, 500, req, res);
-  }
-};
-
-//logout
-const logout = async (req, res) => {
-  // #swagger.tags = ['auth']
-
-  try {
-    req.user = null;
-    return SuccessHandler("Logged out successfully", 200, res);
+    return SuccessHandler(
+      {
+        message: "Login successful",
+        token: jwtToken,
+        user: user,
+      },
+      200,
+      res
+    );
   } catch (error) {
     return ErrorHandler(error.message, 500, req, res);
   }
@@ -185,18 +91,6 @@ const updatePassword = async (req, res) => {
 
   try {
     const { currentPassword, newPassword } = req.body;
-    if (
-      !newPassword.match(
-        /(?=[A-Za-z0-9@#$%^&+!=]+$)^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[@#$%^&+!=])(?=.{8,}).*$/
-      )
-    ) {
-      return ErrorHandler(
-        "Password must contain at least 8 characters, 1 uppercase, 1 lowercase, 1 number and 1 special character",
-        400,
-        req,
-        res
-      );
-    }
     const user = await User.findById(req.user.id).select("+password");
     const isMatch = await user.comparePassword(currentPassword);
     if (!isMatch) {
@@ -219,13 +113,21 @@ const updatePassword = async (req, res) => {
   }
 };
 
+//me
+const me = async (req, res) => {
+  // #swagger.tags = ['auth']
+  try {
+    const user = req.user;
+    return SuccessHandler(user, 200, res);
+  } catch (error) {
+    return ErrorHandler(error.message, 500, req, res);
+  }
+};
+
 module.exports = {
-  register,
-  requestEmailToken,
-  verifyEmail,
   login,
-  logout,
   forgotPassword,
   resetPassword,
   updatePassword,
+  me,
 };
